@@ -3,6 +3,8 @@ Version 1.50 (?? Apr 01)
 - more for() scope VC++ bug workaround.
 - Don't try to compile demo.C on Windows as it required Geomview.
 - Apply the full Delaunay test-suite to the hierarchy, this showed some bugs.
+- Merge the two insert() functions in one, using a default argument for the
+  starting cell.
 
 Version 1.49 (13 Apr 01)
 - locate() interface changes to match the 2D case wrt the default start.
